--- a/Styles.xaml
+++ b/Styles.xaml
@@ -6,8 +6,10 @@
     <SolidColorBrush x:Key="MainBG" Color="#3e4a59"/>
     <SolidColorBrush x:Key="TextBoxBG" Color="#546375"/>
     <SolidColorBrush x:Key="ListViewBG" Color="#485769"/>
+    <SolidColorBrush x:Key="ListItemBG" Color="#232a47"/>
     <SolidColorBrush x:Key="ButtonBG" Color="#80621c"/>
     <SolidColorBrush x:Key="TagItemBG" Color="#6e3c18"/>
+    <SolidColorBrush x:Key="ChecklistItemBG" Color="#3d5057"/>
     <!--#endregion-->
     
     <Style TargetType="Border" x:Key="BorderBase">
@@ -69,6 +71,9 @@
         <Setter Property="Content" Value="-"/>
         <Setter Property="FontSize" Value="22"/>
     </Style>
+    <Style TargetType="TextBlock" x:Key="NormalTitle" BasedOn="{StaticResource WhiteText}">
+        <Setter Property="FontWeight" Value="DemiBold"/>
+    </Style>
     <Style TargetType="TextBlock" x:Key="MediumTitle" BasedOn="{StaticResource WhiteText}">
         <Setter Property="FontSize" Value="16"/>
         <Setter Property="FontWeight" Value="DemiBold"/>
@@ -82,5 +87,39 @@
         <Setter Property="AcceptsTab" Value="False"/>
         <Setter Property="Background" Value="{StaticResource TagItemBG}"/>
         <Setter Property="Foreground" Value="{StaticResource MainText}"/>
+    </Style>
+    <Style TargetType="TextBlock" x:Key="CheckItemText">
+        <Setter Property="Background" Value="{StaticResource ChecklistItemBG}"/>
+        <Setter Property="Padding" Value="4"/>
+        <Setter Property="MaxWidth" Value="300"/>
+        <Setter Property="TextWrapping" Value="Wrap"/>
+        <Setter Property="MinWidth" Value="100"/>
+    </Style>
+    <Style TargetType="TextBox" x:Key="CheckItemBox">
+        <Setter Property="Foreground" Value="{StaticResource MainText}"/>
+        <Setter Property="Background" Value="{StaticResource ChecklistItemBG}"/>
+        <Setter Property="Padding" Value="4"/>
+    </Style>
+    <Style TargetType="CheckBox">
+        <Setter Property="HorizontalAlignment" Value="Center"/>
+        <Setter Property="VerticalAlignment" Value="Center"/>
+    </Style>
+    <Style TargetType="TextBlock" x:Key="AircraftListText" BasedOn="{StaticResource WhiteText}">
+        <Setter Property="Padding" Value="3,2,3,2"/>
+        <Setter Property="Margin" Value="5,2,5,2"/>
+    </Style>
+    <Style TargetType="Border" x:Key="AircraftSelItemBorder" BasedOn="{StaticResource BorderBase}">
+        <Setter Property="Background" Value="{StaticResource ListItemBG}"/>
+    </Style>
+    <Style TargetType="TextBlock" x:Key="AircraftFileLabel" BasedOn="{StaticResource NormalTitle}">
+        <Setter Property="HorizontalAlignment" Value="Left"/>
+        <Setter Property="VerticalAlignment" Value="Center"/>
+    </Style>
+    <Style TargetType="TextBlock" x:Key="AircraftFileText" BasedOn="{StaticResource WhiteText}">
+        <Setter Property="FontSize" Value="14"/>
+        <Setter Property="Block.BorderBrush" Value="{StaticResource MainText}"/>
+        <Setter Property="Block.BorderThickness" Value="1"/>
+        <Setter Property="Padding" Value="4"/>
+        <Setter Property="Margin" Value="10,10"/>
     </Style>
 </ResourceDictionary>
