--- a/Views/ChartView.xaml
+++ b/Views/ChartView.xaml
@@ -4,55 +4,134 @@
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:ChecklistApp.Views"
-             mc:Ignorable="d" 
+             mc:Ignorable="d" Background="{StaticResource MainBG}"
              d:DesignHeight="450" d:DesignWidth="800">
     <Grid>
         <Grid.RowDefinitions>
             <RowDefinition Height="Auto"/>
             <RowDefinition Height="*"/>
+            <RowDefinition Height="Auto"/>
         </Grid.RowDefinitions>
 
         <Border Grid.Row="0">
             <Grid>
-                <Grid.ColumnDefinitions>
-                    <ColumnDefinition Width="Auto"/>
-                    <ColumnDefinition Width="Auto"/>
-                </Grid.ColumnDefinitions>
+                <Grid.RowDefinitions>
+                    <RowDefinition Height="Auto"/>
+                    <RowDefinition Height="Auto"/>
+                </Grid.RowDefinitions>
 
                 <TextBox
-                    Grid.Column="0"
-                    Text="{Binding Path=CurrentAircraft.ChartsFile}"
+                    Grid.Row="0"
+                    Text="{Binding Path=ChartsFileName}"
                 />
+
+                <Grid Grid.Row="1">
+                    <Grid.ColumnDefinitions>
+                        <ColumnDefinition Width="Auto"/>
+                        <ColumnDefinition Width="Auto"/>
+                        <ColumnDefinition Width="*"/>
+                        <ColumnDefinition Width="Auto"/>
+                    </Grid.ColumnDefinitions>
+
+                    <Button
+                        Grid.Column="0"
+                        Margin="5,3"
+                        Command="{Binding Path=OpenChartsCmd}"
+                    >
+                        Open Multiple
+                    </Button>
+                    <Button
+                        Grid.Column="1"
+                        Margin="5,3"
+                        Command="{Binding Path=OpenChartsFileCmd}"
+                    >
+                        Open File
+                    </Button>
+                    <Button
+                        Grid.Column="3"
+                        Margin="5,3"
+                        Command="{Binding Path=SaveChartsCmd}"
+                    >
+                        Save
+                    </Button>
+                </Grid>
             </Grid>
         </Border>
 
-        <ListView
-            Grid.Row="1"
-            ItemsSource="{Binding Path=Charts}"
-            SelectedItem="{Binding Path=SelectedChart}"
-        >
-            <ListView.ItemsPanel>
-                <ItemsPanelTemplate>
-                    <WrapPanel Orientation="Vertical"/>
-                </ItemsPanelTemplate>
-            </ListView.ItemsPanel>
-            <ListView.ItemTemplate>
-                <DataTemplate>
-                    <Border>
-                        <Grid>
-                            <Grid.RowDefinitions>
-                                <RowDefinition Height="Auto"/>
-                                <RowDefinition Height="Auto"/>
-                                <RowDefinition Height="*"/>
-                            </Grid.RowDefinitions>
+        <ScrollViewer x:Name="ChartScrollBar" Grid.Row="1" CanContentScroll="True" PanningMode="HorizontalFirst">
+            <Grid>
+                <Grid.RowDefinitions>
+                    <RowDefinition Height="Auto"/>
+                    <RowDefinition Height="5"/>
+                    <RowDefinition Height="Auto"/>
+                </Grid.RowDefinitions>
+                <ListView
+                    ScrollViewer.PanningMode="HorizontalFirst"
+                    Grid.Row="0"
+                    ItemsSource="{Binding Path=Charts}"
+                    SelectedItem="{Binding Path=SelectedChart}"
+                    HorizontalContentAlignment="Left"
+                    VerticalContentAlignment="Top"
+                >
+                    <ListView.ItemsPanel>
+                        <ItemsPanelTemplate>
+                            <VirtualizingStackPanel
+                                Orientation="Horizontal"
+                                PreviewMouseWheel="Border_MouseWheel"
+                            />
+                        </ItemsPanelTemplate>
+                    </ListView.ItemsPanel>
+                    <ListView.ItemTemplate>
+                        <DataTemplate>
+                            <Border
+                                PreviewMouseWheel="Border_MouseWheel"
+                            >
+                                <Grid
+                                    PreviewMouseWheel="Border_MouseWheel"
+                                >
+                                    <Grid.RowDefinitions>
+                                        <RowDefinition Height="Auto"/>
+                                        <RowDefinition Height="Auto"/>
+                                        <RowDefinition Height="*"/>
+                                        <RowDefinition Height="Auto"/>
+                                    </Grid.RowDefinitions>
 
-                            <TextBlock Grid.Row="0" Text="{Binding Path=Title}"/>
-                            <TextBlock Grid.Row="1" Text="{Binding Path=FileNameDisplay}"/>
-                            <Image Grid.Row="2" Source="{Binding Path=FilePath}"/>
-                        </Grid>
-                    </Border>
-                </DataTemplate>
-            </ListView.ItemTemplate>
-        </ListView>
+                                    <TextBox
+                                        PreviewMouseWheel="Border_MouseWheel"
+                                        Grid.Row="0"
+                                        Text="{Binding Path=Title}"
+                                    />
+                                    <TextBlock
+                                        PreviewMouseWheel="Border_MouseWheel"
+                                        Grid.Row="1"
+                                        Text="{Binding Path=FileNameDisplay}"
+                                    />
+                                    <Image
+                                        PreviewMouseWheel="Border_MouseWheel"
+                                        Grid.Row="2"
+                                        Width="200"
+                                        Source="{Binding Path=FilePath}"
+                                    />
+                                </Grid>
+                            </Border>
+                        </DataTemplate>
+                    </ListView.ItemTemplate>
+                </ListView>
+
+                <GridSplitter Grid.Row="1" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" ResizeDirection="Rows"/>
+
+                <Image Grid.Row="2" Width="{Binding ElementName=ZoomSlider, Path=Value}" Source="{Binding Path=SelectedChart.FilePath}"/>
+            </Grid>
+        </ScrollViewer>
+
+        <Border Grid.Row="2">
+            <StackPanel>
+                <Slider x:Name="ZoomSlider" Maximum="5000" Minimum="50" TickFrequency="10" IsSnapToTickEnabled="False" Interval="1"/>
+                <StackPanel Orientation="Horizontal">
+                    <TextBlock Style="{StaticResource WhiteText}">Path</TextBlock>
+                    <TextBlock Text="{Binding Path=ChartsDir}"/>
+                </StackPanel>
+            </StackPanel>
+        </Border>
     </Grid>
 </UserControl>
