--- a/Views/TagManagerView.xaml
+++ b/Views/TagManagerView.xaml
@@ -34,6 +34,12 @@
         <ListView
             Grid.Row="1"
             ItemsSource="{Binding Path=AllTags, UpdateSourceTrigger=PropertyChanged}"
-        />
+        >
+            <ListView.ItemTemplate>
+                <DataTemplate>
+                    <TextBlock Text="{Binding Path=Value}"/>
+                </DataTemplate>
+            </ListView.ItemTemplate>
+        </ListView>
     </Grid>
 </UserControl>
